--- a/ticket_challange/ticket.html
+++ b/ticket_challange/ticket.html
@@ -19,11 +19,13 @@
         <div class="featured-ticket">
             <div class="featured-text">Geniet van Spik & Span!</div>
                 <div class="buttons">
-                    <a href="register.php">Registratie</a>
-                    <a href="login.php">Inloggen</a>
+                    <a href="register/register.php">Regestratie</a>
+                    <a href="login/login.php">Inloggen</a>
                     <a href="">Bestel nu je tickets</a>
                 </div>
         </div>
     </div>
-    <script src="script.js"></script>
+   
+
+</body>
 </html>
