Telnum is now phone_number

--- a/ticket_template/index.html
+++ b/ticket_template/index.html
@@ -18,7 +18,7 @@
                             <div id="name" class="ticketEntry">NAAM: </div>
                             <div id="date_of_birth" class="ticketEntry">GEBOORTEDATUM: </div>
                             <div id="email" class="ticketEntry">E-MAIL: </div>
-                            <div id="telnum" class="ticketEntry">TEL #: </div>
+                            <div id="phone_number" class="ticketEntry">TEL #: </div>
                             <div id="address" class="ticketEntry">ADRES: </div>
                             <div id="bsn" class="ticketEntry">BSN: </div>
                             <div id="date_of_issue" class="ticketEntry">UITGIFTEDATUM: </div>
